<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/sv_background" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:focusable="true"
		android:focusableInTouchMode="true"
        android:orientation="vertical" >

   
		<TextView
        	android:id="@+id/textView1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/generate_keystream"
	        android:padding="15dip"
	        android:textSize="18sp"
	        android:gravity="center" />
	
	    <TextView
	        android:id="@+id/TextView01"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dip"
	        android:text="@string/deck"
	        android:textSize="18sp" />
	
	    <TextView
	        android:id="@+id/deckTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dip"
	        android:text="@string/deck"
	        android:textSize="18sp" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView03"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="5dip"
	            android:text="@string/message_length"
	            android:textSize="18sp" />
	
	        <EditText
	            android:id="@+id/msgLenEditText"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="number" />
	
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/keyGenButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/generate_keystream" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/keystream"
	        android:padding="5dip"
	        android:textSize="18sp" />
	    
	
	    <EditText
	        android:id="@+id/keyStreamEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textMultiLine|textNoSuggestions" />
	
     
    </LinearLayout>
</ScrollView>
    
